Add scripts, data, styling, components

--- a/src/Categories.scss
+++ b/src/Categories.scss
@@ -1,39 +1,45 @@
 @import 'variables';
 
 .categories {
-  align-items: flex-start;
-  display: flex;
-  font-family: 'SanFranciscoText-RegularItalic';
-  justify-content: space-between;
-  margin: auto;
-  max-width: 975px;
+  position: absolute;
+  max-width: 475px;
+  width: 100%;
+  right: 0;
+  top: 0;
+  &__container {
+    align-items: flex-start;
+    display: flex;
+    font-family: 'SanFranciscoText-RegularItalic';
+    justify-content: space-between;
+    flex-grow: 1;
+  }
 
   &__category {
     border: solid 1px $orange;
     cursor: pointer;
-    width: 225px;
+    width: 125px;
   }
 
   &__category-title {
-    background-color: $transOrange;
+    background-color: $trans-orange;
     border-bottom: solid 1px $orange;
     color: $orange;
-    font-size: 1.4375rem;
-    height: 45px;
-    line-height: 2.8125rem;
+    font-size: 1rem;
+    height: 24px;
+    line-height: 1.5rem;
     text-align: center;
   }
 
   &__subcategory-title {
     color: $orange;
-    font-size: 1.4375rem;
-    height: 45px;
-    line-height: 2.8125rem;
+    font-size: 1rem;
+    height: 24px;
+    line-height: 1.5rem;
     text-align: center;
 
     &--active {
       background-color: $orange;
-      color: $bgGrey;
+      color: $bg-grey;
     }
   }
 }
