--- a/src/TopComparisons.scss
+++ b/src/TopComparisons.scss
@@ -1,6 +1,6 @@
 @import 'variables';
 
-.comparisons {
+.top-comparisons {
   border: solid 1px $orange;
   box-sizing: border-box;
   font-family: 'SanFranciscoText-RegularItalic';
@@ -8,7 +8,15 @@
   max-width: 975px;
   padding: 5px 25px 26px;
   width: 100%;
+  position: relative;
 
+  &__toggle {
+    color: $orange;
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    cursor: pointer;
+  }
   &__row {
     height: 60px;
 
@@ -22,6 +30,7 @@
       height: 60px;
       padding-top: 17px;
       width: 160px;
+      white-space: nowrap;
     }
   }
 
@@ -53,10 +62,6 @@
       bottom: 0;
       position: absolute;
       right: 0;
-    }
-
-    &-active &-value {
-      bottom: -33px;
     }
   }
 }
