--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -7,3 +7,8 @@ $trans-orange: rgba($orange, 0.1);
 $bg-black: #121217;
 $teal: #0ac9f7;
 $title-font: 'Bitter', serif;
+
+$primary-color: $orange;
+$secondary-color: $teal;
+
+$desktop-width: 1440px;
