--- a/src/Categories.scss
+++ b/src/Categories.scss
@@ -1,23 +1,39 @@
 @import 'variables';
+@import 'mixins';
 
 .categories {
-  position: absolute;
-  max-width: 475px;
-  width: 100%;
-  right: 0;
-  top: 0;
+  position: relative;
+  font-family: 'SanFranciscoText-RegularItalic';
+
+  @include desktop-up {
+    position: absolute;
+    max-width: 475px;
+    width: 100%;
+    right: 0;
+    top: 0;
+  }
   &__container {
-    align-items: flex-start;
-    display: flex;
-    font-family: 'SanFranciscoText-RegularItalic';
-    justify-content: space-between;
-    flex-grow: 1;
+    @include tablet-up {
+      align-items: flex-start;
+      display: flex;
+      justify-content: space-between;
+      flex-grow: 1;
+    }
   }
 
   &__category {
     border: solid 1px $orange;
+    margin-top: 30px;
     cursor: pointer;
-    width: 125px;
+    width: 100%;
+
+    @include tablet-up {
+      max-width: 190px;
+    }
+
+    @include desktop-up {
+      width: 125px;
+    }
   }
 
   &__category-title {
@@ -37,7 +53,11 @@
     line-height: 1.5rem;
     text-align: center;
 
-    &--active {
+    &:hover {
+      background-color: $trans-orange;
+    }
+    &--active,
+    &--active:hover {
       background-color: $orange;
       color: $bg-grey;
     }
