--- a/src/Controls.scss
+++ b/src/Controls.scss
@@ -1,4 +1,5 @@
 @import 'variables';
+@import 'mixins';
 
 .controls {
   max-width: 975px;
@@ -6,6 +7,7 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 
   &__back,
   &__all {
@@ -14,9 +16,19 @@
     text-align: center;
     display: inline-block;
     padding: 0 40px;
+    width: 100%;
+    margin-top: 20px;
+
+    @include tablet-up {
+      width: auto;
+      margin: 0;
+    }
+
+    &:hover {
+      background-color: $trans-orange;
+    }
   }
   &__label {
-    background-color: $trans-orange;
     font-family: 'SanFranciscoText-RegularItalic';
     color: $orange;
     font-size: 1rem;
