Add tooltip, cleanup margins

--- a/src/Info.scss
+++ b/src/Info.scss
@@ -15,6 +15,7 @@ $size: 20px;
     display: inline-block;
     height: $size;
     line-height: $size;
+    margin: 2px;
     opacity: 0.7;
     position: absolute;
     right: 0;
