--- a/src/components/Categories/styles.scss
+++ b/src/components/Categories/styles.scss
@@ -1,5 +1,5 @@
-@import 'variables';
-@import 'mixins';
+@import '../../variables';
+@import '../../mixins';
 
 .categories {
   font-family: 'SanFranciscoText-RegularItalic';
