--- a/src/components/Controls/styles.scss
+++ b/src/components/Controls/styles.scss
@@ -30,11 +30,9 @@
   }
 
   &__label {
-    color: $orange;
-    font-family: 'SanFranciscoText-RegularItalic';
-    font-size: 1rem;
-    height: 24px;
-    line-height: 1.5rem;
-    text-align: center;
+    @include button;
+    &:hover {
+      background-color: transparent;
+    }
   }
 }
