--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -5,16 +5,17 @@
   &__title {
     color: $text-grey;
     font-family: $title-font;
-    font-size: 2rem;
+    font-size: 1.75rem;
     font-weight: 400;
-    line-height: 3rem;
-    margin: 0 0 40px;
+    line-height: 2.5rem;
+    margin: 20px 0 30px;
     text-align: center;
     width: 100%;
 
     @include desktop-up {
       font-size: 2.8125rem;
       margin: 0 0 80px;
+      padding-top: 53px;
     }
 
     &--primary {
