--- a/src/components/Comparisons/components/DuelComparisons/styles.scss
+++ b/src/components/Comparisons/components/DuelComparisons/styles.scss
@@ -4,20 +4,20 @@
 .duel-comparisons {
   &__row {
     height: 60px;
+  }
 
-    &-title {
-      box-sizing: border-box;
-      color: $orange;
-      display: inline-block;
-      float: left;
-      font-size: 1rem;
-      height: 60px;
-      padding-top: 17px;
-      width: 160px;
+  &__row-title {
+    box-sizing: border-box;
+    color: $orange;
+    display: inline-block;
+    float: left;
+    font-size: 1rem;
+    height: 60px;
+    padding-top: 17px;
+    width: 160px;
 
-      @include tablet-up {
-        border-bottom: solid 12px $orange;
-      }
+    @include tablet-up {
+      border-bottom: solid 12px $orange;
     }
   }
 
@@ -33,6 +33,7 @@
       display: inline-block;
       width: calc(100% - 160px);
     }
+
     &-primary,
     &-secondary {
       border-bottom: solid 6px $primary-color;
@@ -48,22 +49,22 @@
       height: 54px;
       line-height: 1.5rem;
     }
+  }
 
-    &-value {
-      bottom: -4px;
-      position: absolute;
-      right: 0;
-      font-size: 0.7rem;
-      @include tablet-up {
-        font-size: 1rem;
-      }
+  &__row-bar-value {
+    bottom: -4px;
+    font-size: 0.7rem;
+    position: absolute;
+    right: 0;
+    @include tablet-up {
+      font-size: 1rem;
     }
+  }
 
-    &-primary &-value {
-      bottom: -30px;
-      @include tablet-up {
-        bottom: -33px;
-      }
+  &__row-bar-primary &__row-bar-value {
+    bottom: -30px;
+    @include tablet-up {
+      bottom: -33px;
     }
   }
 }
