--- a/src/components/Comparisons/components/DuelComparisons/styles.scss
+++ b/src/components/Comparisons/components/DuelComparisons/styles.scss
@@ -1,70 +1,15 @@
 @import '../../../../variables';
 @import '../../../../mixins';
 
+/* stylelint-disable */
+:export {
+  enter: $max-enter-duration;
+  exit: $max-exit-duration;
+}
+/* stylelint-enable */
+
 .duel-comparisons {
-  &__row {
-    height: 60px;
-  }
-
-  &__row-title {
-    box-sizing: border-box;
-    color: $orange;
-    display: inline-block;
-    float: left;
-    font-size: 1rem;
-    height: 60px;
-    padding-top: 17px;
-    width: 160px;
-
-    @include tablet-up {
-      border-bottom: solid 12px $orange;
-    }
-  }
-
-  &__row-bar {
-    display: block;
-    font-size: 1rem;
-    height: 60px;
-    line-height: 2.1rem;
-    position: relative;
-    width: 100%;
-
-    @include tablet-up {
-      display: inline-block;
-      width: calc(100% - 160px);
-    }
-
-    &-primary,
-    &-secondary {
-      border-bottom: solid 6px $primary-color;
-      box-sizing: border-box;
-      color: $primary-color;
-      height: 60px;
-      position: absolute;
-    }
-
-    &-secondary {
-      border-bottom: solid 6px $secondary-color;
-      color: $secondary-color;
-      height: 54px;
-      line-height: 1.5rem;
-    }
-  }
-
-  &__row-bar-value {
-    bottom: -4px;
-    font-size: 0.7rem;
-    position: absolute;
-    right: 0;
-    @include tablet-up {
-      font-size: 1rem;
-    }
-  }
-
-  &__row-bar-primary &__row-bar-value {
-    bottom: -30px;
-    @include tablet-up {
-      bottom: -33px;
-    }
+  &__row-fade {
+    @include create(64px, 100%);
   }
 }
