--- a/src/components/Comparisons/styles.scss
+++ b/src/components/Comparisons/styles.scss
@@ -6,6 +6,7 @@
   font-family: 'SanFranciscoText-RegularItalic';
   margin: 20px auto 0;
   max-width: 975px;
+  min-height: 100px;
   padding: 5px 25px 26px;
   position: relative;
   width: 100%;
