--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -2,13 +2,11 @@
 $text-grey: #aaabb4;
 $dark-grey: #505158;
 $bg-grey: #1d1d25;
-$orange: #f73f0a;
+$orange: #fa3d51;
 $trans-orange: rgba($orange, 0.1);
 $bg-black: #121217;
-$teal: #0ac9f7;
+$teal: #28b9c4;
 $title-font: 'Bitter', serif;
 
 $primary-color: $orange;
 $secondary-color: $teal;
-
-$desktop-width: 1440px;
