--- a/src/components/Categories/styles.scss
+++ b/src/components/Categories/styles.scss
@@ -9,7 +9,6 @@
 
 .categories {
   position: relative;
-
   @include desktop-up {
     max-width: 475px;
     position: absolute;
@@ -32,17 +31,20 @@
   }
 
   &__category-container {
-    border: solid 1px $orange;
+    display: flex;
+    flex-grow: 1;
+    flex-wrap: wrap;
+    justify-content: space-between;
     margin-top: 30px;
-    width: 100%;
-
     @include tablet-up {
+      border: solid 1px $orange;
       margin-top: 0;
-      max-width: 190px;
+      width: 225px;
     }
 
     @include desktop-up {
-      width: 125px;
+      max-width: 140px;
+      width: 225px;
     }
   }
 
@@ -50,15 +52,31 @@
     @include button;
     background-color: $trans-orange;
     border-bottom: solid 1px $orange;
-  }
-
-  &__paris {
-    border: solid 1px $orange;
-    margin-top: 1rem;
+    color: $orange;
+    width: 100%;
   }
 
   &__subcategory-title,
   &__paris {
     @include button;
+    border-style: none;
+  }
+
+  &__subcategory-title {
+    margin-top: 10px;
+    width: calc(50% - 5px);
+    @include tablet-up {
+      margin: 0;
+      width: 100%;
+    }
+  }
+
+  &__subcategory-title:nth-of-type(2n + 1) {
+    margin-left: 0;
+  }
+
+  &__paris {
+    border: solid 1px $orange;
+    margin-top: 1rem;
   }
 }
