--- a/src/components/Comparisons/components/Row/styles.scss
+++ b/src/components/Comparisons/components/Row/styles.scss
@@ -2,17 +2,33 @@
 @import '../../../../mixins';
 
 .row {
+  text-align: center;
+  margin: auto;
+
+  &__bar--negative {
+    .row__bar-primary,
+    .row__bar-secondary {
+      right: 0;
+    }
+
+    .row__bar-value {
+      bottom: -4px;
+      position: absolute;
+      right: auto;
+      left: 0;
+    }
+  }
   &__title {
     box-sizing: border-box;
     color: $orange;
     display: inline-block;
     font-size: 1rem;
     height: 60px;
-    padding-top: 17px;
     overflow: hidden;
-    width: 160px;
+    padding-top: 17px;
     text-overflow: ellipsis;
     white-space: nowrap;
+    width: 160px;
     @include tablet-up {
       border-bottom: solid 12px $orange;
     }
@@ -28,7 +44,7 @@
 
     @include tablet-up {
       display: inline-block;
-      width: calc(100% - 160px);
+      width: calc(50% - 80px);
     }
 
     &-primary,
@@ -54,7 +70,7 @@
     position: absolute;
     right: 0;
     @include tablet-up {
-      font-size: 1rem;
+      font-size: 1.2rem;
     }
   }
 
