--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,8 @@
 @import '~normalize.css/normalize.css';
+@import 'variables';
 
 html {
+  background: $bg-black;
   height: calc(100% - 20px);
 }
 
