Refactor data set display and styles

--- a/src/components/Categories/styles.scss
+++ b/src/components/Categories/styles.scss
@@ -51,6 +51,7 @@
   &__category-title {
     @include button;
     background-color: $trans-orange;
+    border: none;
     border-bottom: solid 1px $orange;
     color: $orange;
     width: 100%;
