--- a/src/scenes/Home/styles.scss
+++ b/src/scenes/Home/styles.scss
@@ -7,9 +7,11 @@
 
   // This is alllll a bunch of hacks
   &__tooltip--primary,
-  &__tooltip--secondary {
+  &__tooltip--secondary,
+  &__tooltip--all {
     background: $bg-grey !important;
     border-radius: 0 !important;
+    box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
     cursor: pointer;
 
     &-content {
@@ -19,7 +21,6 @@
     }
 
     &-arrow span {
-      /* stylelint-disable-next-line declaration-property-value-blacklist */
       border: none !important;
     }
   }
@@ -37,6 +38,14 @@
 
     &-content {
       color: $secondary-color !important;
+    }
+  }
+
+  &__tooltip--all {
+    border: solid 1px $dark-grey;
+
+    &-content {
+      color: $text-grey !important;
     }
   }
 
