--- a/src/components/Categories/components/Info/styles.scss
+++ b/src/components/Categories/components/Info/styles.scss
@@ -32,6 +32,7 @@ $size: 20px;
     right: 0;
     text-align: center;
     top: calc(-15px - #{$size});
+    user-select: none;
     width: $size;
 
     &:hover {
