--- a/src/components/Categories/styles.scss
+++ b/src/components/Categories/styles.scss
@@ -10,12 +10,80 @@
 .categories {
   max-width: 50%;
   position: relative;
+  z-index: 1;
   @include desktop-up {
     max-width: 475px;
     position: absolute;
     right: 0;
     top: 0;
     width: 100%;
+
+    &__category {
+      margin-bottom: 20px;
+    }
+  }
+
+  &--all {
+    @include desktop-up {
+      animation-fill-mode: forwards;
+      animation-name: move;
+      @include animation-in;
+
+      .categories__container {
+        flex-wrap: wrap;
+        position: absolute;
+      }
+
+      .categories__category {
+        animation-fill-mode: forwards;
+        animation-name: fade-in-out;
+        @include animation-in;
+
+        &:nth-child(2) {
+          animation-delay: 50ms;
+        }
+
+        &:nth-child(3) {
+          animation-delay: 100ms;
+        }
+      }
+    }
+  }
+
+  @keyframes move {
+    0% {
+      max-width: 475px;
+    }
+
+    49% {
+      max-width: 475px;
+    }
+
+    50% {
+      max-width: 140px;
+    }
+
+    100% {
+      max-width: 140px;
+    }
+  }
+
+  @keyframes fade-in-out {
+    0% {
+      opacity: 1;
+    }
+
+    49% {
+      opacity: 0;
+    }
+
+    50% {
+      opacity: 0;
+    }
+
+    100% {
+      opacity: 1;
+    }
   }
 
   &__category-fade {
@@ -37,6 +105,8 @@
     flex-wrap: wrap;
     justify-content: space-between;
     margin-top: 30px;
+    user-select: none;
+
     @include tablet-up {
       border: solid 1px $orange;
       margin-top: 0;
