--- a/src/components/Comparisons/styles.scss
+++ b/src/components/Comparisons/styles.scss
@@ -1,4 +1,5 @@
 @import '../../variables';
+@import '../../mixins';
 
 .comparisons {
   border: solid 1px $orange;
@@ -10,4 +11,8 @@
   padding: 5px 25px 26px;
   position: relative;
   width: 100%;
+
+  @include mobile-only {
+    display: none;
+  }
 }
