--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -10,8 +10,8 @@
     line-height: 2.5rem;
     margin: 20px 0 30px;
     text-align: center;
+    user-select: none;
     width: 100%;
-
     @include desktop-up {
       font-size: 2.8125rem;
       margin: 0 0 80px;
