--- a/src/components/Comparisons/components/TopComparisons/styles.scss
+++ b/src/components/Comparisons/components/TopComparisons/styles.scss
@@ -9,6 +9,8 @@
 /* stylelint-enable */
 
 .top-comparisons {
+  padding-bottom: 26px;
+
   &__toggle-expand {
     color: $orange;
     cursor: pointer;
