--- a/src/components/Comparisons/styles.scss
+++ b/src/components/Comparisons/styles.scss
@@ -8,7 +8,7 @@
   margin: 20px auto 0;
   max-width: 975px;
   min-height: 100px;
-  padding: 5px 25px 26px;
+  padding: 0 25px;
   position: relative;
   width: 100%;
 
